--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,2 +1,3 @@
 #Thu Mar 06 14:26:54 HKT 2025
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.10.2-bin.zip
+
+distributionUrl=https://mirrors.cloud.tencent.com/gradle/gradle-8.10.2-bin.zip
